--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ option(static_test "Statically linking tests..." OFF)
 option(extended_test "Building extended tests..." OFF)
 option(force_cxx17 "Assuming c++17 is available, and using it" OFF)
 option(use_sajson "Assuming sajson is installed, and using it" OFF)
+option(gen_coverage "Generate gcov coverage information in support envs" OFF)
 
 # Check which dependencies are installed.
 find_path(libgsl gsl/gsl)
@@ -110,6 +111,21 @@ if (build_abi)
   else ()
     target_compile_options(dart_abi PUBLIC -g ${dart_default_compile_options})
     target_compile_options(dart_abi_static PUBLIC -g ${dart_default_compile_options})
+  endif ()
+
+  # Setup code coverage generation if requested.
+  if (gen_coverage AND MSVC)
+    message(FATAL_ERROR "Code coverage not currently supported with MSVC")
+  elseif (gen_coverage AND CMAKE_COMPILER_IS_GNUCXX)
+    target_compile_options(dart_abi PUBLIC "-fprofile-arcs;-ftest-coverage")
+    target_compile_options(dart_abi_static PUBLIC "-fprofile-arcs;-ftest-coverage")
+    target_link_libraries(dart_abi PUBLIC gcov)
+    target_link_libraries(dart_abi_static PUBLIC gcov)
+  elseif (gen_coverage)
+    target_compile_options(dart_abi PUBLIC "--coverage")
+    target_compile_options(dart_abi_static PUBLIC "--coverage")
+    target_link_libraries(dart_abi PUBLIC "--coverage")
+    target_link_libraries(dart_abi_static PUBLIC "--coverage")
   endif ()
 endif ()
 
