--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,29 +23,45 @@ add_executable(unit_tests
 if (extended_test)
   set_property(TARGET unit_tests APPEND PROPERTY COMPILE_DEFINITIONS DART_EXTENDED_TESTS)
 endif ()
+if (gen_coverage AND CMAKE_COMPILER_IS_GNUCXX)
+  target_compile_options(unit_tests PUBLIC "-fprofile-arcs;-ftest-coverage")
+  target_link_libraries(unit_tests PUBLIC gcov)
+elseif (gen_coverage)
+  target_compile_options(unit_tests PUBLIC "--coverage")
+  target_link_libraries(unit_tests PUBLIC "--coverage")
+endif ()
 target_include_directories(unit_tests PUBLIC ../include ${libgsl})
 target_compile_options(unit_tests PUBLIC ${dart_default_compile_options} ${dart_test_compile_options})
 
 # Configure to build our ABI if requested.
 if (build_abi)
   add_executable(abi_tests abi_unit_tests.cc $<TARGET_OBJECTS:catch>)
-  target_link_libraries(abi_tests dart_abi)
+  target_link_libraries(abi_tests PUBLIC dart_abi)
   target_include_directories(abi_tests PUBLIC ../include ${libgsl})
   target_compile_options(abi_tests PUBLIC ${dart_default_compile_options} ${dart_test_compile_options})
   set_property(TARGET unit_tests APPEND PROPERTY COMPILE_DEFINITIONS DART_HAS_ABI)
+
+  # Generate coverage information if it was requested
+  if (gen_coverage AND CMAKE_COMPILER_IS_GNUCXX)
+    target_compile_options(abi_tests PUBLIC "-fprofile-arcs;-ftest-coverage")
+    target_link_libraries(abi_tests PUBLIC gcov)
+  elseif (gen_coverage)
+    target_compile_options(abi_tests PUBLIC "--coverage")
+    target_link_libraries(abi_tests PUBLIC "--coverage")
+  endif ()
 endif ()
 
 # Handle miscellaneous compile switches
 if (32bit)
-  target_link_libraries(unit_tests atomic)
+  target_link_libraries(unit_tests PUBLIC atomic)
   if (build_abi)
-    target_link_libraries(abi_tests atomic)
+    target_link_libraries(abi_tests PUBLIC atomic)
   endif ()
 endif ()
 if (static_test)
-  target_link_libraries(unit_tests "-static-libstdc++")
+  target_link_libraries(unit_tests PUBLIC "-static-libstdc++")
   if (build_abi)
-    target_link_libraries(abi_tests "-static-libdstdc++")
+    target_link_libraries(abi_tests PUBLIC "-static-libdstdc++")
   endif ()
 endif ()
 
@@ -59,7 +75,16 @@ if (librj)
   endif ()
   if (build_abi)
     set_property(TARGET json_test APPEND PROPERTY COMPILE_DEFINITIONS DART_HAS_ABI)
-    target_link_libraries(json_test dart_abi)
+    target_link_libraries(json_test PUBLIC dart_abi)
+  endif ()
+
+  # Generate coverage information if it was requested
+  if (gen_coverage AND CMAKE_COMPILER_IS_GNUCXX)
+    target_compile_options(json_test PUBLIC "-fprofile-arcs;-ftest-coverage")
+    target_link_libraries(json_test PUBLIC gcov)
+  elseif (gen_coverage)
+    target_compile_options(json_test PUBLIC "--coverage")
+    target_link_libraries(json_test PUBLIC "--coverage")
   endif ()
 endif ()
 
@@ -67,7 +92,7 @@ endif ()
 if (can_build_yaml)
   # Define the yaml test
   add_executable(yaml_test yaml_test.cc $<TARGET_OBJECTS:catch>)
-  target_link_libraries(yaml_test ${libyaml})
+  target_link_libraries(yaml_test PUBLIC ${libyaml})
   target_include_directories(yaml_test PUBLIC ../include ${libgsl} ${libyaml})
   if (librj)
     target_include_directories(yaml_test PUBLIC ${librj})
@@ -81,9 +106,18 @@ if (can_build_yaml)
   endif ()
 
   # Link other tests with libyaml
-  target_link_libraries(unit_tests ${libyaml})
+  target_link_libraries(unit_tests PUBLIC ${libyaml})
   if (build_abi)
-    target_link_libraries(abi_tests ${libyaml})
+    target_link_libraries(abi_tests PUBLIC ${libyaml})
+  endif ()
+
+  # Generate coverage information if it was requested
+  if (gen_coverage AND CMAKE_COMPILER_IS_GNUCXX)
+    target_compile_options(yaml_test PUBLIC "-fprofile-arcs;-ftest-coverage")
+    target_link_libraries(yaml_test PUBLIC gcov)
+  elseif (gen_coverage)
+    target_compile_options(yaml_test PUBLIC "--coverage")
+    target_link_libraries(yaml_test PUBLIC "--coverage")
   endif ()
 endif ()
 
