--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -24,5 +24,5 @@ COPY . /root/libdart
 CMD cd /root/libdart                                                                      \
   && mkdir build                                                                          \
   && cd build                                                                             \
-  && cmake .. -D32bit=ON -Dstatic_test=ON                                                 \
+  && cmake .. -Dbuild_abi=ON -D32bit=ON -Dstatic_test=ON                                  \
   && make VERBOSE=1
