--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,9 @@ option(gen_coverage "Generate gcov coverage information in support envs" OFF)
 option(use_asan "Link tests with address sanitizer" OFF)
 
 # Check which dependencies are installed.
-find_path(libgsl gsl/gsl)
 find_library(libyaml yaml)
-find_path(librj rapidjson/reader.h)
+find_path(libgsl gsl/gsl HINTS ${PROJECT_SOURCE_DIR}/include/extern)
+find_path(librj rapidjson/reader.h HINTS ${PROJECT_SOURCE_DIR}/include/extern)
 if (NOT librj)
   CHECK_INCLUDE_FILE_CXX("rapidjson/reader.h" librj)
 endif ()
@@ -92,8 +92,8 @@ if (build_abi)
 
   # Set our preprocessor to export dll symbols if we're on windows.
   if (MSVC)
-    set_property(TARGET dart_abi APPEND PROPERTY COMPILE_DEFINITIONS DART_EXPORTS)
-    set_property(TARGET dart_abi_static APPEND PROPERTY COMPILE_DEFINITIONS DART_EXPORTS)
+    target_compile_definitions(dart_abi PUBLIC DART_EXPORTS=1)
+    target_compile_definitions(dart_abi_static PUBLIC DART_EXPORTS=1)
   endif ()
 
   # Set compile switches based on what's installed
