Rounded out API with conversion back to user types Conversion API has switched to dart::convert::conversion_traits Bug fixes may be pushed in the future, but this is the final design for the conversion API

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,6 +26,6 @@ build_script:
   - cd ..
   - mkdir build
   - cd build
-  - cmake .. -G "%GENERATOR%" -A x64 -Dbuild_abi=ON -Dextended_test=ON
+  - cmake .. -G "%GENERATOR%" -A x64 -Dbuild_abi=ON
   - cmake --build . --config %BUILD_TYPE%
   - ctest --output-on-failure --build-config %BUILD_TYPE%
