Added some initial ABI benchmark cases

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -23,16 +23,25 @@ endif ()
 # Setup global flags
 target_compile_options(static_bench PUBLIC -O3 -DNDEBUG ${dart_default_compile_options})
 target_include_directories(static_bench PUBLIC ${libbenchmark_include})
-target_link_libraries(static_bench Threads::Threads ${libbenchmark})
+target_link_libraries(static_bench PUBLIC Threads::Threads ${libbenchmark})
 if (librj)
   target_compile_options(configurable_bench PUBLIC -O3 -DNDEBUG ${dart_default_compile_options})
   target_include_directories(configurable_bench PUBLIC ${libbenchmark_include})
-  target_link_libraries(configurable_bench Threads::Threads ${libbenchmark})
+  target_link_libraries(configurable_bench PUBLIC Threads::Threads ${libbenchmark})
+endif ()
+
+if (build_abi)
+  set_property(TARGET static_bench APPEND PROPERTY COMPILE_DEFINITIONS DART_HAS_ABI)
+  target_link_libraries(static_bench PUBLIC dart_abi_static)
+  if (librj)
+    set_property(TARGET configurable_bench APPEND PROPERTY COMPILE_DEFINITIONS DART_HAS_ABI)
+    target_link_libraries(configurable_bench PUBLIC dart_abi_static)
+  endif ()
 endif ()
 
 # Link against libyaml if we have it.
 if (libyaml)
-  target_link_libraries(static_bench ${libyaml})
+  target_link_libraries(static_bench PUBLIC ${libyaml})
 endif (libyaml)
 
 # Link against flatbuffers if we have it
@@ -43,10 +52,10 @@ endif ()
 
 # Handle YAJL
 if (libyajl)
-  target_link_libraries(static_bench ${libyajl})
+  target_link_libraries(static_bench PUBLIC ${libyajl})
   target_compile_options(static_bench PUBLIC -DDART_HAS_YAJL)
   if (librj)
-    target_link_libraries(configurable_bench ${libyajl})
+    target_link_libraries(configurable_bench PUBLIC ${libyajl})
     target_compile_options(configurable_bench PUBLIC -DDART_HAS_YAJL)
   endif ()
 endif ()
@@ -61,10 +70,10 @@ endif ()
 
 # Handle Jansson
 if (libjansson)
-  target_link_libraries(static_bench ${libjansson})
+  target_link_libraries(static_bench PUBLIC ${libjansson})
   target_compile_options(static_bench PUBLIC -DDART_HAS_JANSSON)
   if (librj)
-    target_link_libraries(configurable_bench ${libjansson})
+    target_link_libraries(configurable_bench PUBLIC ${libjansson})
     target_compile_options(configurable_bench PUBLIC -DDART_HAS_JANSSON)
   endif ()
 endif ()
